# mancalamax-rs

./: Cargo.toml  LICENSE  README.md
src/: game.rs  lib.rs  main.rs  minimax.rs  ml.rs  ui.rs
src/game/: common.rs  dyn_game_state.rs  game_state.rs  mancala.rs
src/minimax/: algorithm.rs  builder.rs  traits.rs  zobrist.rs
src/ml/: datagen.rs  dataset.rs
src/ui/: gui.rs  terminal.rs
