[package]
name = "mancalamax"
version = "0.1.0"
edition = "2024"
description = "[TBD]"
authors = ["Ethan Mentzer"]
repository = "https://github.com/cometbeetle/mancalamax-rs"
homepage = "https://github.com/cometbeetle/mancalamax-rs"
readme = "README.md"
license = "MIT"
keywords = ["minimax", "game", "mancala", "alpha-beta"]
categories = ["algorithms"]

[features]
gui = ["dep:bevy"]
serde = ["dep:serde"]

[dependencies]
rand = "0.9"
serde = { version = "1.0", optional = true }
bevy = { version = "0.16", optional = true }
